@@ -11,6 +11,7 @@ bin/npg_pipeline_post_qc_review
 bin/npg_pipeline_preexec_references
 bin/npg_pipeline_script_must_be_unique_runner
 bin/npg_pipeline_seqchksum_comparator
+bin/npg_pipeline_showback
 bin/npg_receipt4run_is_deletable
 bin/npg_run_is_deletable
 Build.PL
@@ -58,6 +59,7 @@ lib/npg_pipeline/function/s3_archiver.pm
 lib/npg_pipeline/function/seq_alignment.pm
 lib/npg_pipeline/function/seq_to_irods_archiver.pm
 lib/npg_pipeline/function/seqchksum_comparator.pm
+lib/npg_pipeline/function/showback.pm
 lib/npg_pipeline/function/start_stop.pm
 lib/npg_pipeline/function/status.pm
 lib/npg_pipeline/function/util.pm
