@@ -1,0 +1,104 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+use FindBin qw($Bin);
+use lib ( -d "$Bin/../lib/perl5" ? "$Bin/../lib/perl5" : "$Bin/../lib" );
+use Log::Log4perl qw(:levels);
+
+our $VERSION = '0';
+
+use npg_pipeline::function::showback;
+
+my $layout = '%d %-5p %c - %m%n';
+Log::Log4perl->easy_init({layout => $layout,
+                          level  => $INFO,
+                          utf8   => 1});
+
+npg_pipeline::function::showback->new_with_options()->process_run();
+
+0;
+__END__
+
+=head1 NAME
+
+npg_pipeline_showback
+
+=head1 USAGE
+
+npg_pipeline_showback --executor_type lsf \
+  --runfolder_path=/tmp/ET_oOGYecL/nfs/sf45/IL2/analysis/123456_IL2_1234Data/Intensities/BAM_basecalls_20100907-142417/' 
+
+=head1 REQUIRED ARGUMENTS
+
+=over
+
+id_run
+
+bam_basecall_path 
+
+runfolder_path
+
+=back 
+
+=head1 OPTIONS
+
+=head1 EXIT STATUS
+
+0
+
+=head1 CONFIGURATION
+
+=head1 SYNOPSIS
+
+=head1 DESCRIPTION
+
+This script is run at the end of the analysis pipeline, to collect and store
+runtime statistics.
+
+=head1 SUBROUTINES/METHODS
+
+=head1 DIAGNOSTICS
+
+=head1 CONFIGURATION AND ENVIRONMENT
+
+=head1 DEPENDENCIES
+
+=over
+
+=item strict
+
+=item warnings
+
+=item lib
+
+=item Log::Log4perl
+
+=item FindBin
+
+=back
+
+=head1 INCOMPATIBILITIES
+
+=head1 BUGS AND LIMITATIONS
+
+=head1 AUTHOR
+
+Jennifer Liddle
+
+=head1 LICENSE AND COPYRIGHT
+
+Copyright (C) 2020 Genome Research Limited
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
